components/policies/best-practices/require-requests-limits/test/cronjob-good.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          containers:
            - name: container01
              image: dummyimagename
              resources:
                requests:
                  memory: 256Mi
                  cpu: 500m
                limits:
                  memory: 256Mi
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob02
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          containers:
            - name: busybox
              image: busybox
              resources:
                requests:
                  memory: 50Mi
                  cpu: 100m
                limits:
                  memory: 100Mi
            - name: nginx
              image: nginx
              resources:
                requests:
                  memory: 256Mi
                  cpu: 500m
                limits:
                  memory: 256Mi
---
