components/policies/best-practices/require-requests-limits/test/pod-bad.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  labels:
    app: myapp
spec:
  containers:
    - name: nginx
      image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
  labels:
    app: myapp
spec:
  containers:
    - name: nginx
      image: nginx
      resources:
        requests:
          memory: 256Mi
          cpu: 500m
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
  labels:
    app: myapp
spec:
  containers:
    - name: busybox
      image: busybox
    - name: nginx
      image: nginx
      resources:
        requests:
          memory: 256Mi
          cpu: 500m
        limits:
          memory: 256Mi
---
