components/policies/best-practices/require-requests-limits/test/pod-good.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  labels:
    app: myapp
spec:
  containers:
    - name: nginx
      image: nginx
      resources:
        requests:
          memory: 256Mi
          cpu: 500m
        limits:
          memory: 256Mi
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
  labels:
    app: myapp
spec:
  containers:
    - name: busybox
      image: busybox
      resources:
        requests:
          memory: 50Mi
          cpu: 100m
        limits:
          memory: 100Mi
    - name: nginx
      image: nginx
      resources:
        requests:
          memory: 256Mi
          cpu: 500m
        limits:
          memory: 256Mi
---
